--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "node-sass --output-style=compressed --source-map=true --source-map-contents=scss --recursive --output=css scss"
   },
   "author": "Max Bachhuber <bahuma20@bahuma.io>",
   "license": "ISC",
