--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,11 +43,11 @@ jobs:
         run: resume export output/index.html --theme=.
 
       - name: deploy file
-        uses: wlixcc/SFTP-Deploy-Action@v1.0
+        uses: Creepios/sftp-action@v1.0.1
         with:
           username: 'bahuma-me'
-          server: 'server4.bahuma.io'
-          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} 
-          local_path: './output/*'
-          remote_path: '/var/www/vhosts/bahuma.io/httpdocs/www'
-          args: '-o ConnectTimeout=5'
+          host: 'server4.bahuma.io'
+          port: 22
+          privateKey: ${{ secrets.SSH_PRIVATE_KEY }} 
+          local_path: './output'
+          remote_path: '/var/www/vhosts/bahuma.io/httpdocs/www/'
