--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "less": "^3.9.0"
   },
   "scripts": {
-    "serve": "resume serve --resume=example-resume.json",
+    "serve": "resume serve --resume=resume.json",
     "build:example": "resume export resume.html --resume=example-resume.json",
     "build:styles": "lessc assets/less/default/styles.less assets/css/styles.css",
     "build:styles:2": "lessc assets/less/theme-2/styles.less assets/css/styles.css",
