--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: bahuma.io deployment
 
 # Controls when the workflow will run
 on:
@@ -28,17 +28,11 @@ jobs:
         with:
           node-version: '14'
 
-      - name: Install resume-cli
-        run: npm install -g resume-cli
-
       - name: Install npm dependencies
         run: npm install
 
-      - name: Compile CSS
-        run: npm run build:styles:3
-
-      - name: Build HTML
-        run: resume export output/index.html --theme=.
+      - name: Build
+        run: npm start
 
       - name: deploy file
         uses: swillner/sftp-sync-action@v1.0
@@ -47,6 +41,6 @@ jobs:
           server: 'server4.bahuma.io'
           user_private_key: ${{ secrets.SSH_PRIVATE_KEY }} 
           #host_public_key: "ssh-rsa tEPUrwIiZNMK8Sv30bn/IhGFbUtnA4yHn7Wv2IEaxiQ"
-          local: './output'
+          local: './public'
           remote: '/var/www/vhosts/bahuma.io/httpdocs/www'
           mirror_options: "--verbose"
