--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,46 +1,44 @@
-# This is a basic workflow to help you get started with Actions
+name: Deploy
 
-name: bahuma.io deployment
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  deploy:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.1'
       - uses: actions/checkout@v2
-      
-      # Install NodeJS
-      - uses: actions/setup-node@v2
+      - name: Cache Composer packages
+        id: composer-cache
+        uses: actions/cache@v2
         with:
-          node-version: '14'
+          path: vendor
+          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-php-
+      - name: Install Dependencies
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
 
-      - name: Install npm dependencies
-        run: npm install
-
-      - name: Build
-        run: npm start
-
-      - name: deploy file
-        uses: swillner/sftp-sync-action@v1.0
+      - name: upload
+        uses: burnett01/rsync-deployments@5.2
         with:
-          user: 'bahuma-me'
-          server: 'server4.bahuma.io'
-          user_private_key: ${{ secrets.SSH_PRIVATE_KEY }} 
-          #host_public_key: "ssh-rsa tEPUrwIiZNMK8Sv30bn/IhGFbUtnA4yHn7Wv2IEaxiQ"
-          local: './public'
-          remote: '/var/www/vhosts/bahuma.io/httpdocs/www'
-          mirror_options: "--verbose"
+          switches: --exclude '.git' --exclude '.github' --exclude 'cache' -avzr --delete
+          path: ./
+          remote_path: /var/www/vhosts/vhosts/bahuma.io/httpdocs/www
+          remote_host: server4.bahuma.io
+          remote_user: bahuma-me
+          remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: executing post upload actions via ssh
+        uses: appleboy/ssh-action@master
+        with:
+          host: server4.bahuma.io
+          username: bahuma-me
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
+          script: rm -rf /var/www/vhosts/vhosts/bahuma.io/httpdocs/cache
