--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           switches: --exclude '.git' --exclude '.github' --exclude 'cache' -avzr --delete
           path: ./
-          remote_path: /var/www/vhosts/vhosts/bahuma.io/httpdocs/www
+          remote_path: /var/www/vhosts/bahuma.io/httpdocs/www
           remote_host: server4.bahuma.io
           remote_user: bahuma-me
           remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -41,4 +41,4 @@ jobs:
           username: bahuma-me
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
-          script: rm -rf /var/www/vhosts/vhosts/bahuma.io/httpdocs/cache
+          script: rm -rf /var/www/vhosts/bahuma.io/httpdocs/www/cache
